Revert "Fix icon alignment"
This reverts commit 934cd937e4900d7b24a2800c65e0c082172ec79d.

--- a/wp-content/themes/makers/style2.css
+++ b/wp-content/themes/makers/style2.css
@@ -115,15 +115,7 @@
     margin: 0 auto;
     max-width: 45px;
     max-height: 45px;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.boxes-icon {
-    height: 45px;
-    line-height: 45px;
-    margin: 0 auto 1.25rem auto;
+    margin: 1.25rem auto;
 }
 
 @media screen and (min-width: 40rem) {
@@ -138,7 +130,6 @@
         width: 33.333333%;
         float: left;
         height: 240px;
-        padding-top: 4rem;
     }
 
     .boxes li::before,
